tests/ui/delegation/correct_body_owner_parent_found_in_diagnostics.stderr
error[E0261]: use of undeclared lifetime name `'a`
  --> $DIR/correct_body_owner_parent_found_in_diagnostics.rs:21:68
   |
LL |     reuse <u8 as Trait>::{foo, bar, meh} { &const { InvariantRef::<'a>::NEW } }
   |                                                                    ^^ undeclared lifetime
   |
help: consider introducing lifetime `'a` here
   |
LL |     reuse <u8 as Trait>::{foo'a, , bar, meh} { &const { InvariantRef::<'a>::NEW } }
   |                              +++
help: consider introducing lifetime `'a` here
   |
LL | impl<'a> Trait for Z {
   |     ++++

error[E0261]: use of undeclared lifetime name `'a`
  --> $DIR/correct_body_owner_parent_found_in_diagnostics.rs:21:68
   |
LL |     reuse <u8 as Trait>::{foo, bar, meh} { &const { InvariantRef::<'a>::NEW } }
   |                                                                    ^^ undeclared lifetime
   |
help: consider introducing lifetime `'a` here
   |
LL |     reuse <u8 as Trait>::{foo, bar'a, , meh} { &const { InvariantRef::<'a>::NEW } }
   |                                   +++
help: consider introducing lifetime `'a` here
   |
LL | impl<'a> Trait for Z {
   |     ++++

error[E0261]: use of undeclared lifetime name `'a`
  --> $DIR/correct_body_owner_parent_found_in_diagnostics.rs:21:68
   |
LL |     reuse <u8 as Trait>::{foo, bar, meh} { &const { InvariantRef::<'a>::NEW } }
   |                                                                    ^^ undeclared lifetime
   |
help: consider introducing lifetime `'a` here
   |
LL |     reuse <u8 as Trait>::{foo, bar, meh'a, } { &const { InvariantRef::<'a>::NEW } }
   |                                        +++
help: consider introducing lifetime `'a` here
   |
LL | impl<'a> Trait for Z {
   |     ++++

error[E0599]: no associated function or constant named `new` found for struct `InvariantRef<'a, T>` in the current scope
  --> $DIR/correct_body_owner_parent_found_in_diagnostics.rs:8:41
   |
LL | pub struct InvariantRef<'a, T: ?Sized>(&'a T, PhantomData<&'a mut &'a T>);
   | -------------------------------------- associated function or constant `new` not found for this struct
...
LL |     pub const NEW: Self = InvariantRef::new(&());
   |                                         ^^^ associated function or constant not found in `InvariantRef<'_, _>`

error[E0277]: the trait bound `u8: Trait` is not satisfied
  --> $DIR/correct_body_owner_parent_found_in_diagnostics.rs:21:12
   |
LL |     reuse <u8 as Trait>::{foo, bar, meh} { &const { InvariantRef::<'a>::NEW } }
   |            ^^ the trait `Trait` is not implemented for `u8`
   |
help: the trait `Trait` is implemented for `Z`
  --> $DIR/correct_body_owner_parent_found_in_diagnostics.rs:20:1
   |
LL | impl Trait for Z {
   | ^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> $DIR/correct_body_owner_parent_found_in_diagnostics.rs:21:44
   |
LL |     reuse <u8 as Trait>::{foo, bar, meh} { &const { InvariantRef::<'a>::NEW } }
   |                           ---              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `&u8`, found `&InvariantRef<'_, ()>`
   |                           |
   |                           arguments to this function are incorrect
   |
   = note: expected reference `&u8`
              found reference `&InvariantRef<'_, ()>`
note: method defined here
  --> $DIR/correct_body_owner_parent_found_in_diagnostics.rs:13:8
   |
LL |     fn foo(&self) -> u8 { 0 }
   |        ^^^ -----

error[E0277]: the trait bound `u8: Trait` is not satisfied
  --> $DIR/correct_body_owner_parent_found_in_diagnostics.rs:21:12
   |
LL |     reuse <u8 as Trait>::{foo, bar, meh} { &const { InvariantRef::<'a>::NEW } }
   |            ^^ the trait `Trait` is not implemented for `u8`
   |
help: the trait `Trait` is implemented for `Z`
  --> $DIR/correct_body_owner_parent_found_in_diagnostics.rs:20:1
   |
LL | impl Trait for Z {
   | ^^^^^^^^^^^^^^^^
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0308]: mismatched types
  --> $DIR/correct_body_owner_parent_found_in_diagnostics.rs:21:44
   |
LL |     reuse <u8 as Trait>::{foo, bar, meh} { &const { InvariantRef::<'a>::NEW } }
   |                                ---         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `&u8`, found `&InvariantRef<'_, ()>`
   |                                |
   |                                arguments to this function are incorrect
   |
   = note: expected reference `&u8`
              found reference `&InvariantRef<'_, ()>`
note: method defined here
  --> $DIR/correct_body_owner_parent_found_in_diagnostics.rs:14:8
   |
LL |     fn bar(&self) -> u8 { 1 }
   |        ^^^ -----

error[E0277]: the trait bound `u8: Trait` is not satisfied
  --> $DIR/correct_body_owner_parent_found_in_diagnostics.rs:21:12
   |
LL |     reuse <u8 as Trait>::{foo, bar, meh} { &const { InvariantRef::<'a>::NEW } }
   |            ^^ the trait `Trait` is not implemented for `u8`
   |
help: the trait `Trait` is implemented for `Z`
  --> $DIR/correct_body_owner_parent_found_in_diagnostics.rs:20:1
   |
LL | impl Trait for Z {
   | ^^^^^^^^^^^^^^^^
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0308]: mismatched types
  --> $DIR/correct_body_owner_parent_found_in_diagnostics.rs:21:44
   |
LL |     reuse <u8 as Trait>::{foo, bar, meh} { &const { InvariantRef::<'a>::NEW } }
   |                                     ---    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `&u8`, found `&InvariantRef<'_, ()>`
   |                                     |
   |                                     arguments to this function are incorrect
   |
   = note: expected reference `&u8`
              found reference `&InvariantRef<'_, ()>`
note: method defined here
  --> $DIR/correct_body_owner_parent_found_in_diagnostics.rs:15:8
   |
LL |     fn meh(&self) -> u8 { 2 }
   |        ^^^ -----

error: aborting due to 10 previous errors

Some errors have detailed explanations: E0261, E0277, E0308, E0599.
For more information about an error, try `rustc --explain E0261`.
